--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -21,10 +21,6 @@
                 display: none !important;
             }
 		}
-		.israel {
-			background-color: rgb(167, 32, 32);
-		}
-
         .document {
             margin: auto auto;
             width: 216mm;
@@ -72,7 +68,7 @@
             left: 0px;
             top: 0px;
             font-size: 12px;
-            font-weight: bold;
+			font-weight: bold;			
         }
         .titleisrael {
             position: absolute;
@@ -180,36 +176,6 @@
 	{{object.data_emprestimo.day }}<br>
 	{{object.data_emprestimo.month }}<br>
 	{{object.data_emprestimo.year }}<br> -->
-
-	{% comment %} <a>Data do teste</a>
-	{{object.valor_emprestado}}
-	<div >
-		{% render_field form.data_emprestimo  id="data_emprestimo2" type="date" %} <br>		
-		<button onclick="aumentar2()">Try it 2</button>
-	</div>
-
-	<script>
-	function aumentar2(){
-		window.document.getElementById("data_emprestimo2").stepUp(30);
-	}
-	</script>
-	
-	
-	<script>
-	function aumentar(){
-		window.document.getElementById("data_emprestimo").stepUp(30);
-	}
-	</script>	
-	Date2: {% render_field form.data_emprestimo type="text" id="data_emprestimo" type="date" %}<br><br>
-	<button onclick="aumentar()">Try it</button>
-
-	<script>
-		var data = moment().today();
-		document.write(`Sua soma foi ${data}`)
-	</script> {% endcomment %}
-
-	
-	 
 	
 	<br>
 <!-- -------------------------------------------------------------------------------------------------- -->
@@ -230,7 +196,7 @@
 
 </div> -->
 
-<!-- FNÇÃO QUE GERA O BOLETO -->
+<!-- FUNÇÃO QUE GERA O BOLETO -->
 <input type="button" class="btn btn-warning" value="Gerar Boleto" onclick="imprimir()"><br><br>
 <div class="document">
 	<div id = "carne" class="col-sm-6"></div>
@@ -257,10 +223,14 @@
 			//VARIÁVEIS DO EMPRESTIMO
 			var aux_qtd_parccela = {{object.qtd_parcelas}}
 
-			var valor_da_parcela = "{{object.valor_emprestado}}"
 			var data_emissao = "{{object.data_emprestimo|date:"d/m/Y"}}"
-			var valor_multa = 999.99
-			var valor_juros_dia = 888.88
+
+			var valor_da_parcela = parseFloat("{{object.valor_emprestado}}");			
+
+			var valor_multa = (valor_da_parcela*0.02).toFixed(2);
+			
+			var valor_juros_dia = (valor_da_parcela*0.0066).toFixed(2);
+
 			var contador_parcela = 0		
 			
 			//VARIÁVEIS DO CLIENTE
@@ -287,193 +257,141 @@
 				mes = 1	
 				aux_ano++
 				ano++				
-			}			
+			}	
 
-			if ((i+1)%3 != 0){
-				carne.innerHTML +=
+			carne.innerHTML +=
 				`<table cellspacing="0" cellpadding="0" border="1">
 					<!--1º linha-->
 					<tr>
-						<td width="15%">
-							<span class="title">Nº Documento</span>
+						<td width="15%" >
+							<span class="title" align="center">CREDCOOP</span>
 							<br/>
-							<span class="text">Ver como gerar </span>
+							<span class="text">Tel: (84) 4141-3210 </span>
 						</td>
 						<td width="1px"></td>
-						<td width="39%" colspan="5">
-							<span class="title">Local de Pagamento</span>
+						<td width="39%" colspan="6">
+							<p class="content center"><b>CREDCOOP</b></p>							
+							<p class="content center">(84) 4131-3210</p>						
+						</td>						
+					</tr>
+					<!--2º linha-->
+					<tr>					
+						<td width="15%">							
+							<span class="title">Vencimento</span>							
+							<br/>						
+							<p class="content right text">${dia}/${mes}/${ano}</p>	
+														
+						</td>
+						<td width="1px" ></td>
+						<td width="70%" colspan="5">
+							<span class="title">&nbsp Local de Pagamento</span>	
 							<br/>
-							<span class="text">PREFERENCIALMENTE ATÉ O VALOR LIMITE </span>							
+							<p class="content left text">&nbsp Escritório</span></p>	
 						</td>
 						<td width="45%">
 							<span class="title">Vencimento</span>
 							<br/>				
 							<p class="content right text">${dia}/${mes}/${ano}</p>
-						</td>
-					</tr>
-					<!--2º linha-->
-					<tr>					
-						<td width="15%">
-							<span class="title">Vencimento</span>							
-							<br/>								
-							<p class="content left text">${dia}/${mes}/${ano}</p>							
-						</td>
-						<td width="1px" ></td>
-						<td width="70%" colspan="5">
-							<span class="title">Cedente</span>	
-							<br/>
-							<p class="content left text">CREDCOOP - COOPERATIVA DE CRÉDITO 2</span></p>	
-						</td>
-						<td width="30%">
-							<span class="title">Ag/Cod. Cedente</span>
-							<br/>							
-							<p class="content text right">3242/453967-2</p>							
+						
 						</td>
 					</tr>
 					<!--3º linha-->
 					<tr>
 						<td width="15%">
-							<span class="title">Ag/Cod. Cedente</span>
+							<span class="title">Valor do Documento</span>
 							<br/>
-							<p class="content center">3242/453967-2</p>
+							<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
 						</td>
 						<td width="1px"></td>
-						<td width="17%" colspan="2">
-							<span class="title">Dt. Emissão</span>
+						<td width="17%" colspan="5">
+							<span class="title">&nbsp Nome do Cedente</span>
 							<br/>
-							<p class="content center">${data_emissao}</p>
+							<p class="content left">&nbsp CREDCOOP</p>
 						</td>
-						<td width="10%">
-							<span class="title">Espécie doc</span>
+						<td width="15%">
+							<span class="title">Valor do Documento</span>
 							<br/>
-							<p class="content center">DM</p>
-						</td>
-						<td width="8%">
-							<span class="title">Aceite</span>
-							<br/>
-							<p class="content center">NÃO</p>
-						</td>
-						<td>
-							<span class="title">Data Processamento</span>
-							<br/>
-							<p class="content center">${data_emissao}</p>
-						</td>
-						<td width="30%">
-							<span class="title">Nosso Número</span>
-							<br/>
-							<br/>
-							<p class="content right">Ver com josemir</p>
+							<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
 						</td>
 					</tr>
 					<!--4º linha-->
 					<tr>
-						<td width="15%">
-							<span class="title">Nosso Número</span>
+						<td width="15%">							
 							<br/>
-							<p class="content center">ver com josemir2</p>
+							<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
 						</td>
 						<td width="1px">
 							<span class="title"></span>
 							<br/>
 							<p class="content center"></p>
 						</td>
-						<td width="10%">
-							<span class="title">Uso do Banco</span>
-							<br/>
-							<p class="content center"></p>
-						</td>
-						<td width="10%">
-							<span class="title">Carteira</span>
-							<br/>
-							<p class="content center">02</p>
-						</td>
-						<td width="15%" colspan="1">
-							<span class="title">Esp. Moeda</span>
-							<br/>
-							<p class="content center">R$</p>
-						</td>
-						<td width="15%" colspan="1">
-							<span class="title">Qtde. Moeda</span>
-							<br/>
-							<p class="content center"></p>
-						</td>
+						<td width="50%" colspan="4">
+							<span class="title">&nbsp Dt. Emissão: </span><br>							
+							<p class="content left">&nbsp ${data_emissao}</p>
+						</td>		
 						<td>
-							<span class="title">Valor Moeda</span>
+							<span class="title"></span>
 							<br/>
 							<p class="content center"></p>
 						</td>
 						<td width="30%">
-							<span class="title">Valor Doc</span>
-							<br/>
-							<br/>
-							<p class="content right">R$ ${valor_da_parcela}</p>
+							<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
 						</td>
 					</tr>	
 					<!--5º linha-->			
 					<tr>
 					
 						<td width="15%">
-							<span class="title">Valor Doc</span>
-							<br/>
-							<br/>
-							<p class="content right">R$ ${valor_da_parcela}</p>
+							<p class="content center">(-) Descontos </p><br>							
 						</td>
 						<td width="1px"></td>
 						<td colspan="5" rowspan="4">
-							<span class="titleisrael">Texto de responsabilidade do cedente<br/>
-							MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
-							JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
-							NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
-							PARCELA ${contador_parcela}/${aux_qtd_parccela}
+							<span class="titleisrael">&nbsp Instruções<br/>
+							&nbsp MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
+							&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
+							&nbsp NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
+						
 							</span>				
 						</td>
-						<td width="15%" >
-							<span class="title">Desconto</span>
-							<br/>
-							<span class="text"> </span>
+						<td width="15%">
+							<p class="content center">(-) Descontos </p><br>							
 						</td>
 					</tr>	
 					<!--6º linha-->				
 					<tr>
-						<td>
-							<span class="title">Desconto</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
+						<td width="15%">
+							<p class="content center">(+) Acréscimos </p><br>							
 						</td>
 						<td width="1px"></td>
-						<td>
-							<span class="title">Outras Deduc/Abat.</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
+						<td width="15%">
+							<p class="content center">(+) Acréscimos </p><br>							
 						</td>
 						
 					</tr>
 					<!--7º linha-->
 					<tr>
-						<td>
-							<span class="title">Outras Deduc/Abat.</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
+						<td width="15%">
+							<p class="content center">(=) Valor Pago </p><br>							
 						</td>
 						<td width="1px"></td>
-						<td width="15%" >
-							<span class="title">Mora/Multa</span>
-							<br/>
-							<span class="text"></span>
+						<td width="15%">
+							<p class="content center">(=) Valor Pago </p><br>							
 						</td>
 					</tr>
 					<!--8º linha-->
 					<tr>
-						<td>
-							<span class="title">Mora/Multa</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
+						<td width="15%">
+							<span class="title">Visto do Operador</span>
+							<br>
+							<p class="content center">Pago em ___/___/___ </p>
+							<br>
 						</td>
 						<td width="1px"></td>
-						<td width="15%" >
-							<span class="title">Outros Acres.</span>
-							<br/>
-							<span class="text">&nbsp;</span>
+						<td width="15%">
+							<span class="title">Visto do Operador</span>
+							<br>
+							<p class="content center">Pago em ___/___/___ </p>
+							<br>
 						</td>
 					</tr>
 					<!--9º linha-->
@@ -485,238 +403,14 @@
 						</td>
 						<td width="1px"></td>
 						<td width="39%" colspan="5">
-							<span class="title">Sacado: ${cliente_nome} </span>
+							<span class="title">Sacado: ${cliente_nome} </span><br>
 							<br/>
-							<span class="text"> </span>							
-						</td>
-						<td width="45%">
-							<span class="title">Vencimento</span>
-							<br/>				
-							<p class="content right text">${dia}/${mes}/${ano}</p>
+							<span class="text">Endereço:  </span><br>							
 						</td>
 					</tr>
+					<br/>
 					
 				</table><br>`
-				
-				
-			}
-			
-			else {
-				
-				carne.innerHTML += 					
-				`<table cellspacing="0" cellpadding="0" border="1">
-					<tr>
-						<td width="15%" >
-							<span class="title">Nº Documento</span>
-							<br/>
-							<span class="text">Ver como gerar </span>
-						</td>
-						<td width="70%" colspan="5">
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">PREFERENCIALMENTE ATÉ O VALOR LIMITE </span>
-						</td>
-						<td width="15%">
-							<span class="title">Vencimento</span>
-							<br/>
-							<br/>
-							<p class="content right text" style="font-weight:bold;">${dia}/${mes}/${ano}</p>
-						</td>
-					</tr>
-					<tr>
-						<td width="15%" >
-							<span class="title">Vencimento</span>
-							<br/>
-							<span class="text">${dia}/${mes}/${ano}</span>
-						</td>
-						<td width="70%" colspan="5">
-							<span class="title">Cedente </span>
-							<br/>
-							<table border="0" style="border:none">
-								<tr>
-									<td width="60%"><span class="text">CREDCOOP - COOPERATIVA DE CRÉDITO 2</span></td>									
-								</tr>
-							</table>
-							<br/>
-							
-						</td>
-						<td width="30%">
-							<span class="title">Ag/Cod. Cedente</span>
-							<br/>
-							<br/>
-							<p class="content right">3242/453967-2</p>
-						</td>
-					</tr>
-		
-					<tr>
-						<td width="15%">
-							<span class="title">Ag/Cod. Cedente</span>
-							<br/>
-							<p class="content center">3242/453967-2</p>
-						</td>
-						<td width="17%" colspan="2">
-							<span class="title">Dt. Emissão</span>
-							<br/>
-							<p class="content center">${data_emissao}</p>
-						</td>
-						<td width="10%">
-							<span class="title">Espécie doc</span>
-							<br/>
-							<p class="content center">DM</p>
-						</td>
-						<td width="8%">
-							<span class="title">Aceite</span>
-							<br/>
-							<p class="content center">NÃO</p>
-						</td>
-						<td>
-							<span class="title">Data Processamento</span>
-							<br/>
-							<p class="content center">${data_emissao}</p>
-						</td>
-						<td width="30%">
-							<span class="title">Nosso Número</span>
-							<br/>
-							<br/>
-							<p class="content right">Ver com josemir</p>
-						</td>
-					</tr>
-		
-					<tr>
-						<td width="15%">
-							<span class="title">Nosso Número</span>
-							<br/>
-							<p class="content center">ver com josemir2</p>
-						</td>
-						<td width="10%">
-							<span class="title">Uso do Banco</span>
-							<br/>
-							<p class="content center"></p>
-						</td>
-						<td width="10%">
-							<span class="title">Carteira</span>
-							<br/>
-							<p class="content center">02</p>
-						</td>
-						<td width="15%" colspan="1">
-							<span class="title">Esp. Moeda</span>
-							<br/>
-							<p class="content center">R$</p>
-						</td>
-						<td width="15%" colspan="1">
-							<span class="title">Qtde. Moeda</span>
-							<br/>
-							<p class="content center"></p>
-						</td>
-						<td>
-							<span class="title">Valor Moeda</span>
-							<br/>
-							<p class="content center"></p>
-						</td>
-						<td width="30%">
-							<span class="title">Valor Doc</span>
-							<br/>
-							<br/>
-							<p class="content right">R$ ${valor_da_parcela}</p>
-						</td>
-					</tr>					
-					<tr>
-					
-						<td width="15%">
-							<span class="title">Valor Doc</span>
-							<br/>
-							<br/>
-							<p class="content right">R$ ${valor_da_parcela}</p>
-						</td>
-						<td colspan="5" rowspan="4">
-							<span class="titleisrael">Texto de responsabilidade do cedente<br/>
-							MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
-							JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
-							NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
-							PARCELA ${contador_parcela}/${aux_qtd_parccela}
-							</span>
-							
-							
-												
-						</td>
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<span class="title">(-) Descontos</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
-						</td>
-						<td>
-							<span class="title">(-) Descontos</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
-						</td>
-						
-					</tr>
-					<tr>
-						<td>
-							<span class="title">(+) Juros/Multa</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
-						</td>
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<span class="title">(=) Valor Pago</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
-						</td>
-						
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
-						</td>
-					</tr>
-					<tr>
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
-						</td>
-						<td colspan="7">
-							<table border="0" style="border:none">
-								<tr>
-									<td width="60%"><span class="text"><b>Nome do Pagador: </b> Pagador ABC</span></td>
-									<td><span class="text"><b>CNPJ/CPF: </b> 123.121.001-00</span></td>
-								</tr>
-								<tr>
-									<td><span class="text"><b>Endereço: </b> Avenida Brasil 1234 - Jardim Brasil - São Paulo - SP - 9999999-999</span></td>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><span class="text"><b>Sacador/Avalista: </b> &nbsp;</span></td>
-									<td><span class="text"><b>CNPJ/CPF: </b> &nbsp;</span></td>
-								</tr>
-							</table>
-						</td>
-					</tr>
-				</table><br>`
-				+ `.</br>`
-				+ `.</br>`
-				+ `.</br>`
-				+ `.</br>`
-				+ `.</br>`
-				+ `.</br>`
-				+ `.</br>`
-				+ `.</br>`
-				
-			}					
 			}			
 		}
 
