--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -130,7 +130,6 @@
             line-height: 20px;
         }
 
-
     
     i[class*=icss-]{position:relative;display:inline-block;font-style:normal;background-color:currentColor;-webkit-box-sizing:border-box;box-sizing:border-box;vertical-align:middle}i[class*=icss-]:after,i[class*=icss-]:before{content:"";border-width:0;position:absolute;-webkit-box-sizing:border-box;box-sizing:border-box}i.icss-print{width:.68em;height:1em;border-style:solid;border-color:currentcolor;border-width:.07em;-webkit-border-radius:.05em;border-radius:.05em;background-color:transparent;margin:0 .17em}i.icss-print:before{width:1em;height:.4em;border-width:.07em .21em 0;border-style:solid;border-color:currentColor currentcolor transparent;-webkit-border-radius:.05em .05em 0 0;border-radius:.05em .05em 0 0;top:.25em;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background-image:-webkit-gradient(linear,left top,left bottom,color-stop(20%,transparent),color-stop(20%,currentcolor),color-stop(60%,currentcolor),color-stop(60%,transparent));background-image:-webkit-linear-gradient(transparent 20%,currentcolor 20%,currentcolor 60%,transparent 60%);background-image:-o-linear-gradient(transparent 20%,currentcolor 20%,currentcolor 60%,transparent 60%);background-image:linear-gradient(transparent 20%,currentcolor 20%,currentcolor 60%,transparent 60%)}i.icss-print:after{width:.45em;height:.065em;background-color:currentColor;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);top:.6em;-webkit-box-shadow:0 .12em,-.1em -.28em 0 .05em;box-shadow:0 .12em,-.1em -.28em 0 .05em}i.icss-files{width:.75em;height:.95em;background-color:transparent;border:.05em solid transparent;border-width:0 .05em .05em 0;-webkit-box-shadow:inset 0 0 0 .065em,.13em .11em 0 -.05em;box-shadow:inset 0 0 0 .065em,.13em .11em 0 -.05em;-webkit-border-radius:0 .3em 0 0;border-radius:0 .3em 0 0;margin:0 .17em .05em .1em}i.icss-files:before{border-style:solid;border-width:.2em;top:.037em;left:.25em;-webkit-border-radius:.1em;border-radius:.1em;border-color:transparent currentColor transparent transparent;-webkit-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg)}
         </style>
@@ -197,10 +196,11 @@
 </div> -->
 
 <!-- FUNÇÃO QUE GERA O BOLETO -->
-<input type="button" class="btn btn-warning" value="Gerar Boleto" onclick="imprimir()"><br><br>
+<input type="button" class="btn btn-warning" value="Gerar Boleto" onclick="imprimir()"> <br>
+
 <div class="document">
 	<div id = "carne" class="col-sm-6"></div>
-</div><br>
+</div>
 <!-- ----------------------- -->
 <script>		
 	//document.write(`Sua soma foi ${dataEmprestimo}`)|date:"Y-m-d"}}+3"
@@ -259,158 +259,326 @@
 				ano++				
 			}	
 
+			if ((i+1)%4 != 0){
 			carne.innerHTML +=
-				`<table cellspacing="0" cellpadding="0" border="1">
-					<!--1º linha-->
-					<tr>
-						<td width="15%" >
-							<span class="title" align="center">CREDCOOP</span>
-							<br/>
-							<span class="text">Tel: (84) 4141-3210 </span>
-						</td>
-						<td width="1px"></td>
-						<td width="39%" colspan="6">
-							<p class="content center"><b>CREDCOOP</b></p>							
-							<p class="content center">(84) 4131-3210</p>						
-						</td>						
-					</tr>
-					<!--2º linha-->
-					<tr>					
-						<td width="15%">							
-							<span class="title">Vencimento</span>							
-							<br/>						
-							<p class="content right text">${dia}/${mes}/${ano}</p>	
-														
-						</td>
-						<td width="1px" ></td>
-						<td width="70%" colspan="5">
-							<span class="title">&nbsp Local de Pagamento</span>	
-							<br/>
-							<p class="content left text">&nbsp Escritório</span></p>	
-						</td>
-						<td width="45%">
-							<span class="title">Vencimento</span>
-							<br/>				
-							<p class="content right text">${dia}/${mes}/${ano}</p>
+				`
+					<table cellspacing="0" cellpadding="0" border="1">
+						<!--1º linha-->
+						<tr>
+							<td width="15%" >
+								<span class="title" align="center">CREDCOOP</span>
+								<br/>
+								<span class="text">Tel: (84) 4141-3210 </span>
+							</td>
+							<td width="1px"></td>
+							<td width="39%" colspan="6">
+								<p class="content center"><b>CREDCOOP</b></p>							
+								<p class="content center">(84) 4131-3210</p>						
+							</td>						
+						</tr>
+						<!--2º linha-->
+						<tr>					
+							<td width="15%">							
+								<span class="title">Vencimento</span>							
+								<br/>						
+								<p class="content right text">${dia}/${mes}/${ano}</p>	
+															
+							</td>
+							<td width="1px" ></td>
+							<td width="70%" colspan="5">
+								<span class="title">&nbsp Local de Pagamento</span>	
+								<br/>
+								<p class="content left text">&nbsp Escritório</span></p>	
+							</td>
+							<td width="45%">
+								<span class="title">Vencimento</span>
+								<br/>				
+								<p class="content right text">${dia}/${mes}/${ano}</p>
+							
+							</td>
+						</tr>
+						<!--3º linha-->
+						<tr>
+							<td width="15%">
+								<span class="title">Valor do Documento</span>
+								<br/>
+								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+							</td>
+							<td width="1px"></td>
+							<td width="17%" colspan="5">
+								<span class="title">&nbsp Nome do Cedente</span>
+								<br/>
+								<p class="content left">&nbsp CREDCOOP</p>
+							</td>
+							<td width="15%">
+								<span class="title">Valor do Documento</span>
+								<br/>
+								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+							</td>
+						</tr>
+						<!--4º linha-->
+						<tr>
+							<td width="15%">							
+								<br/>
+								<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
+							</td>
+							<td width="1px">
+								<span class="title"></span>
+								<br/>
+								<p class="content center"></p>
+							</td>
+							<td width="50%" colspan="4">
+								<span class="title">&nbsp Dt. Emissão: </span><br>							
+								<p class="content left">&nbsp ${data_emissao}</p>
+							</td>		
+							<td>
+								<span class="title"></span>
+								<br/>
+								<p class="content center"></p>
+							</td>
+							<td width="30%">
+								<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
+							</td>
+						</tr>	
+						<!--5º linha-->			
+						<tr>
 						
-						</td>
-					</tr>
-					<!--3º linha-->
-					<tr>
-						<td width="15%">
-							<span class="title">Valor do Documento</span>
-							<br/>
-							<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
-						</td>
-						<td width="1px"></td>
-						<td width="17%" colspan="5">
-							<span class="title">&nbsp Nome do Cedente</span>
-							<br/>
-							<p class="content left">&nbsp CREDCOOP</p>
-						</td>
-						<td width="15%">
-							<span class="title">Valor do Documento</span>
-							<br/>
-							<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
-						</td>
-					</tr>
-					<!--4º linha-->
-					<tr>
-						<td width="15%">							
-							<br/>
-							<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
-						</td>
-						<td width="1px">
-							<span class="title"></span>
-							<br/>
-							<p class="content center"></p>
-						</td>
-						<td width="50%" colspan="4">
-							<span class="title">&nbsp Dt. Emissão: </span><br>							
-							<p class="content left">&nbsp ${data_emissao}</p>
-						</td>		
-						<td>
-							<span class="title"></span>
-							<br/>
-							<p class="content center"></p>
-						</td>
-						<td width="30%">
-							<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
-						</td>
-					</tr>	
-					<!--5º linha-->			
-					<tr>
-					
-						<td width="15%">
-							<p class="content center">(-) Descontos </p><br>							
-						</td>
-						<td width="1px"></td>
-						<td colspan="5" rowspan="4">
-							<span class="titleisrael">&nbsp Instruções<br/>
-							&nbsp MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
-							&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
-							&nbsp NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
+							<td width="15%">
+								<p class="content center">(-) Descontos </p><br>							
+							</td>
+							<td width="1px"></td>
+							<td colspan="5" rowspan="4">
+								<span class="titleisrael">&nbsp Instruções<br/>
+								&nbsp MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
+								&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
+								&nbsp NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
+							
+								</span>				
+							</td>
+							<td width="15%">
+								<p class="content center">(-) Descontos </p><br>							
+							</td>
+						</tr>	
+						<!--6º linha-->				
+						<tr>
+							<td width="15%">
+								<p class="content center">(+) Acréscimos </p><br>							
+							</td>
+							<td width="1px"></td>
+							<td width="15%">
+								<p class="content center">(+) Acréscimos </p><br>							
+							</td>
+							
+						</tr>
+						<!--7º linha-->
+						<tr>
+							<td width="15%">
+								<p class="content center">(=) Valor Pago </p><br>							
+							</td>
+							<td width="1px"></td>
+							<td width="15%">
+								<p class="content center">(=) Valor Pago </p><br>							
+							</td>
+						</tr>
+						<!--8º linha-->
+						<tr>
+							<td width="15%">
+								<span class="title">Visto do Operador</span>
+								<br>
+								<p class="content center">Pago em ___/___/___ </p>
+								<br>
+							</td>
+							<td width="1px"></td>
+							<td width="15%">
+								<span class="title">Visto do Operador</span>
+								<br>
+								<p class="content center">Pago em ___/___/___ </p>
+								<br>
+							</td>
+						</tr>
+						<!--9º linha-->
+						<tr>
+							<td width="15%">
+								<span class="title">Outros Acres.</span>
+								<br/>
+								<span class="text"></span>
+							</td>
+							<td width="1px"></td>
+							<td width="39%" colspan="5">
+								<span class="title">Sacado: ${cliente_nome} </span><br>
+								<br/>
+								<span class="text">Endereço:  </span><br>							
+							</td>
+							<td width="15%">
+								<span class="title">Outros Acres.</span>
+								<br/>
+								<span class="text"></span>
+							</td>
+						</tr>
+					</table><br>				
+					`
+				}
+				else {
+					carne.innerHTML += 
+					`
+					<table cellspacing="0" cellpadding="0" border="1">
+						<!--1º linha-->
+						<tr>
+							<td width="15%" >
+								<span class="title" align="center">CREDCOOP</span>
+								<br/>
+								<span class="text">Tel: (84) 4141-3210 </span>
+							</td>
+							<td width="1px"></td>
+							<td width="39%" colspan="6">
+								<p class="content center"><b>CREDCOOP</b></p>							
+								<p class="content center">(84) 4131-3210</p>						
+							</td>						
+						</tr>
+						<!--2º linha-->
+						<tr>					
+							<td width="15%">							
+								<span class="title">Vencimento</span>							
+								<br/>						
+								<p class="content right text">${dia}/${mes}/${ano}</p>	
+															
+							</td>
+							<td width="1px" ></td>
+							<td width="70%" colspan="5">
+								<span class="title">&nbsp Local de Pagamento</span>	
+								<br/>
+								<p class="content left text">&nbsp Escritório</span></p>	
+							</td>
+							<td width="45%">
+								<span class="title">Vencimento</span>
+								<br/>				
+								<p class="content right text">${dia}/${mes}/${ano}</p>
+							
+							</td>
+						</tr>
+						<!--3º linha-->
+						<tr>
+							<td width="15%">
+								<span class="title">Valor do Documento</span>
+								<br/>
+								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+							</td>
+							<td width="1px"></td>
+							<td width="17%" colspan="5">
+								<span class="title">&nbsp Nome do Cedente</span>
+								<br/>
+								<p class="content left">&nbsp CREDCOOP</p>
+							</td>
+							<td width="15%">
+								<span class="title">Valor do Documento</span>
+								<br/>
+								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+							</td>
+						</tr>
+						<!--4º linha-->
+						<tr>
+							<td width="15%">							
+								<br/>
+								<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
+							</td>
+							<td width="1px">
+								<span class="title"></span>
+								<br/>
+								<p class="content center"></p>
+							</td>
+							<td width="50%" colspan="4">
+								<span class="title">&nbsp Dt. Emissão: </span><br>							
+								<p class="content left">&nbsp ${data_emissao}</p>
+							</td>		
+							<td>
+								<span class="title"></span>
+								<br/>
+								<p class="content center"></p>
+							</td>
+							<td width="30%">
+								<p class="content center"><b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
+							</td>
+						</tr>	
+						<!--5º linha-->			
+						<tr>
 						
-							</span>				
-						</td>
-						<td width="15%">
-							<p class="content center">(-) Descontos </p><br>							
-						</td>
-					</tr>	
-					<!--6º linha-->				
-					<tr>
-						<td width="15%">
-							<p class="content center">(+) Acréscimos </p><br>							
-						</td>
-						<td width="1px"></td>
-						<td width="15%">
-							<p class="content center">(+) Acréscimos </p><br>							
-						</td>
-						
-					</tr>
-					<!--7º linha-->
-					<tr>
-						<td width="15%">
-							<p class="content center">(=) Valor Pago </p><br>							
-						</td>
-						<td width="1px"></td>
-						<td width="15%">
-							<p class="content center">(=) Valor Pago </p><br>							
-						</td>
-					</tr>
-					<!--8º linha-->
-					<tr>
-						<td width="15%">
-							<span class="title">Visto do Operador</span>
-							<br>
-							<p class="content center">Pago em ___/___/___ </p>
-							<br>
-						</td>
-						<td width="1px"></td>
-						<td width="15%">
-							<span class="title">Visto do Operador</span>
-							<br>
-							<p class="content center">Pago em ___/___/___ </p>
-							<br>
-						</td>
-					</tr>
-					<!--9º linha-->
-					<tr>
-						<td width="15%">
-							<span class="title">Outros Acres.</span>
-							<br/>
-							<span class="text"></span>
-						</td>
-						<td width="1px"></td>
-						<td width="39%" colspan="5">
-							<span class="title">Sacado: ${cliente_nome} </span><br>
-							<br/>
-							<span class="text">Endereço:  </span><br>							
-						</td>
-					</tr>
-					<br/>
-					
-				</table><br>`
+							<td width="15%">
+								<p class="content center">(-) Descontos </p><br>							
+							</td>
+							<td width="1px"></td>
+							<td colspan="5" rowspan="4">
+								<span class="titleisrael">&nbsp Instruções<br/>
+								&nbsp MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
+								&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
+								&nbsp NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
+							
+								</span>				
+							</td>
+							<td width="15%">
+								<p class="content center">(-) Descontos </p><br>							
+							</td>
+						</tr>	
+						<!--6º linha-->				
+						<tr>
+							<td width="15%">
+								<p class="content center">(+) Acréscimos </p><br>							
+							</td>
+							<td width="1px"></td>
+							<td width="15%">
+								<p class="content center">(+) Acréscimos </p><br>							
+							</td>
+							
+						</tr>
+						<!--7º linha-->
+						<tr>
+							<td width="15%">
+								<p class="content center">(=) Valor Pago </p><br>							
+							</td>
+							<td width="1px"></td>
+							<td width="15%">
+								<p class="content center">(=) Valor Pago </p><br>							
+							</td>
+						</tr>
+						<!--8º linha-->
+						<tr>
+							<td width="15%">
+								<span class="title">Visto do Operador</span>
+								<br>
+								<p class="content center">Pago em ___/___/___ </p>
+								<br>
+							</td>
+							<td width="1px"></td>
+							<td width="15%">
+								<span class="title">Visto do Operador</span>
+								<br>
+								<p class="content center">Pago em ___/___/___ </p>
+								<br>
+							</td>
+						</tr>
+						<!--9º linha-->
+						<tr>
+							<td width="15%">
+								<span class="title">Outros Acres.</span>
+								<br/>
+								<span class="text"></span>
+							</td>
+							<td width="1px"></td>
+							<td width="39%" colspan="5">
+								<span class="title">Sacado: ${cliente_nome} </span><br>
+								<br/>
+								<span class="text">Endereço:  </span><br>							
+							</td>
+							<td width="15%">
+								<span class="title">Outros Acres.</span>
+								<br/>
+								<span class="text"></span>
+							</td>
+						</tr>
+					</table><br>				
+					`
+					+ `.</br>`
+				
+				}
 			}			
 		}
 
